--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <img src="IMG20230920144805.jpg" alt="photo CV">
     </div>
     <div id="presentation">
-        <p id="nom"><strong>nom:</strong></p>
-        <p id="prenom"><strong>prénom:</strong></p>
-        <p id="age"><strong>age:</strong></p>
-        <p id="email"><strong>email:</strong></p>
-        <p id="adresse"><strong>adresse:</strong></p>
-        <p id="telephone"><strong>téléphone:</strong></p>
+        <p><strong>nom:</strong> forest</p>
+        <p><strong>prénom: </strong>damien</p>
+        <p><strong>age:</strong> 28</p>
+        <p><strong>email:</strong> damien.forest18@gmail.com</p>
+        <p><strong>adresse:</strong> 5 rue du champ paillée</p>
+        <p><strong>téléphone:</strong>06 15 47 84 95</p>
     </div>
     <div id="competences">
         <p id="competencestitre"><strong>Compétences</strong></p>
@@ -28,6 +28,17 @@
         <p><strong>javascript:</strong></p>
         <p><strong>linux:</strong></p>
     </div>
-    <div id="centredinteret">Centre d'intéret</div>
+    <div id="centredinteret">
+        <p id="centretitre"><strong>Centre d'intéret</strong></p>
+        <p>Jeux vidéos</p>
+            <p>elden ring, call of, overwatch</p>
+        <p>Cuisine</p>
+            <p>surtout les desserts</p>
+        <p>randonnée</p>
+            <p>j'aime bien marcher c'est tout</p>
+    </div>
+    <div id="experiences">
+        <p id="exptitre"><strong>Expériences professionnelles</strong></p>
+    </div>
 </body>
 </html>
