--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     </div>
     <div id="experiences">
         <p id="exptitre"><strong>Expériences professionnelles</strong></p>
+        <p id="soustitre">Stage dévelloppeur web</p>
+        <p>site forum dédié au question réponse</p>
+        <p id="soustitre">Stage cuisine</p>
+        <p>commis de cuisine a disney land</p>
+        <p id="soustitre">Stage cuisine</p>
+        <p>commis de cuisine a l'hotel best western</p>
     </div>
 </body>
 </html>
